2007-04-15  Stefan Jahn  <stefan@lkcc.org>

	* dialogs/packagedialog.cpp (slotCreate): Adding ".qucs" extension
	if not already given.
	(extractPackage): Fixed bug inhibiting packages without file
	extension.

	* dialogs/importdialog.cpp (ImportDialog): Fixed odd behaviour of
	the dialog (import button disabled when saying no at overwrite
	message box).

2007-04-14  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/diagram.cpp (loadVarData): Fixed locale problem
	due to a bug in SCIM (libscim) which Qt is linked to.

2007-04-11  Stefan Jahn  <stefan@lkcc.org>

	* element.h: Added 'over' and 'under' properties to texts.

2007-04-10  Stefan Jahn  <stefan@lkcc.org>

	* textdoc.cpp (print): Also fixed print scale for text
	documents.

	* schematic.cpp (print): Fixed print scale for schematics.  It
	assumed a screen resolution of 72dpi.

	* mouseactions.cpp (rotateElements): Made rotation sticky while
	placing elements from the component tab as well as when pasting
	elements from the clipboard into the schematic.

2007-04-05  Stefan Jahn  <stefan@lkcc.org>

	* schematic_file.cpp (throughAllNodes): Skip nodeset netlist
	entries during digital simulations.

2007-03-31  Stefan Jahn  <stefan@lkcc.org>

	* textdoc.cpp (TextDoc): Using mono-spaced font in text
	editor.

	* schematic_file.cpp (giveNodeNames): Fixed loading of
	Verilog files during VHDL run and vice versa.

	* qucs.cpp (initContentListView): Added verilog files in
	content tab.

2007-03-29  Stefan Jahn  <stefan@lkcc.org>

	* dialogs/simmessage.cpp (FinishSimulation): Improved some
	translatable strings.

2007-03-28  Stefan Jahn  <stefan@lkcc.org>

	* schematic_file.cpp (createNetlist): Fixed a bug in
	determining the simulation time of digital simulations
	occurring when there are other disabled simulations
	placed on the schematic.
	(createSubNetlist): Implemented subcircuit modules for
	Verilog simulations.

2007-03-26  Stefan Jahn  <stefan@lkcc.org>

	* qucsveri: New digital simulation wrapper for Icarus