@@ -84,9 +84,13 @@ benutzt werden.<br><br>
 <tr><td><tt>arccos(x)</tt></td><td>Arkuskosinus von x</td></tr>
 <tr><td><tt>arctan(x[,y])</tt></td><td>Arkustangens von x</td></tr>
 <tr><td><tt>arccot(x)</tt></td><td>Arkuskotangens von x</td></tr>
+<tr><td><tt>arcsec(x)</tt></td><td>Arkussekans von x</td></tr>
+<tr><td><tt>arccosec(x)</tt></td><td>Arkuskosekans von x</td></tr>
 <tr><td><tt>arsinh(x)</tt></td><td>Area Sinushyperbolikus von x</td></tr>
 <tr><td><tt>arcosh(x)</tt></td><td>Area Kosinushyperbolikus von x</td></tr>
 <tr><td><tt>artanh(x)</tt></td><td>Area Tangenshyperbolikus von x</td></tr>
+<tr><td><tt>arsech(x)</tt></td><td>Area Sekanshyperbolikus von x</td></tr>
+<tr><td><tt>arcosech(x)</tt></td><td>Area Kosekanshyperbolikus von x</td></tr>
 <tr><td><tt>arcoth(x)</tt></td><td>Area Kotangenshyperbolikus von x</td></tr>
 <tr><td><tt>sec(x)</tt></td><td>Sekans von x</td></tr>
 <tr><td><tt>cosec(x)</tt></td><td>Kosekans von x</td></tr>
