@@ -84,9 +84,13 @@ Qucs equations.<br><br>
 <tr><td><tt>arccos(x)</tt></td><td>arcus cosine</td></tr>
 <tr><td><tt>arctan(x[,y])</tt></td><td>arcus tangent</td></tr>
 <tr><td><tt>arccot(x)</tt></td><td>arcus cotangent</td></tr>
+<tr><td><tt>arcsec(x)</tt></td><td>arcus secans</td></tr>
+<tr><td><tt>arccosec(x)</tt></td><td>arcus cosecans</td></tr>
 <tr><td><tt>arsinh(x)</tt></td><td>area sine hyperbolicus</td></tr>
 <tr><td><tt>arcosh(x)</tt></td><td>area cosine hyperbolicus</td></tr>
 <tr><td><tt>artanh(x)</tt></td><td>area tangent hyperbolicus</td></tr>
+<tr><td><tt>arsech(x)</tt></td><td>area secans hyperbolicus</td></tr>
+<tr><td><tt>arcosech(x)</tt></td><td>area cosecans hyperbolicus</td></tr>
 <tr><td><tt>arcoth(x)</tt></td><td>area cotangent hyperbolicus</td></tr>
 <tr><td><tt>sec(x)</tt></td><td>secans</td></tr>
 <tr><td><tt>cosec(x)</tt></td><td>cosecans</td></tr>
